--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Vkoo8x4CGs03+Hhxv8T/Q5PaXtkKtu6ug5T0eNV6gBiFeWPGFN9Muh0f23Q9Ifjh" crossorigin="a
 
     <div class="row mt-2">
 
-        <div class="col text-center">
+        <div id="divBotones" class="col text-center">
 
             <button class="btn btn-danger ">Nuevo Juego</button>
             <button class="btn btn-primary">Pedir Carta</button>
@@ -34,7 +34,7 @@ Vkoo8x4CGs03+Hhxv8T/Q5PaXtkKtu6ug5T0eNV6gBiFeWPGFN9Muh0f23Q9Ifjh" crossorigin="a
 
         <div class="col">
 
-            <h1>Juegador 1 - <small>0</small></h1>
+            <h1>Jugador 1 - <small>0</small></h1>
             <div id="jugador-cartas">
                 <img class="carta" src="assets/cartas/2C.png" alt="">
                 <img class="carta" src="assets/cartas/2C.png" alt="">
@@ -58,7 +58,7 @@ Vkoo8x4CGs03+Hhxv8T/Q5PaXtkKtu6ug5T0eNV6gBiFeWPGFN9Muh0f23Q9Ifjh" crossorigin="a
 
         </div>
     </div>
-
+    <script src="assets/js/undescore-min.js"></script>
     <script src="assets/js/juego.js"></script>
 </body>
 
