--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ Vkoo8x4CGs03+Hhxv8T/Q5PaXtkKtu6ug5T0eNV6gBiFeWPGFN9Muh0f23Q9Ifjh" crossorigin="a
 
         <div id="divBotones" class="col text-center">
 
-            <button class="btn btn-danger ">Nuevo Juego</button>
-            <button class="btn btn-primary">Pedir Carta</button>
-            <button class="btn btn-primary">Detener</button>
+            <button id="btnNuevo" class=" btn-danger" >Nuevo Juego</button>
+            <button id="btnPedir" class="btn-primary" >Pedir Carta</button>
+            <button id="btnDetener" class="btn-primary" >Detener</button>
 
 
         </div>
@@ -36,9 +36,9 @@ Vkoo8x4CGs03+Hhxv8T/Q5PaXtkKtu6ug5T0eNV6gBiFeWPGFN9Muh0f23Q9Ifjh" crossorigin="a
 
             <h1>Jugador 1 - <small>0</small></h1>
             <div id="jugador-cartas">
+                <!-- <img class="carta" src="assets/cartas/2C.png" alt="">
                 <img class="carta" src="assets/cartas/2C.png" alt="">
-                <img class="carta" src="assets/cartas/2C.png" alt="">
-                <img class="carta" src="assets/cartas/2C.png" alt="">
+                <img class="carta" src="assets/cartas/2C.png" alt=""> -->
             </div>
 
         </div>
@@ -51,9 +51,8 @@ Vkoo8x4CGs03+Hhxv8T/Q5PaXtkKtu6ug5T0eNV6gBiFeWPGFN9Muh0f23Q9Ifjh" crossorigin="a
 
             <h1>Computadora - <small>0</small></h1>
             <div id="computadora-cartas">
-                <img class="carta" src="assets/cartas/10D.png" alt="">
-                <img class="carta" src="assets/cartas/10D.png" alt="">
-                <img class="carta" src="assets/cartas/10D.png" alt="">
+                <!-- <img class="carta" src="assets/cartas/10D.png" alt=""> -->
+ 
             </div>
 
         </div>
