--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ Vkoo8x4CGs03+Hhxv8T/Q5PaXtkKtu6ug5T0eNV6gBiFeWPGFN9Muh0f23Q9Ifjh" crossorigin="a
 
         <div id="divBotones" class="col text-center">
 
-            <button id="btnNuevo" class=" btn-danger" >Nuevo Juego</button>
-            <button id="btnPedir" class="btn-primary" >Pedir Carta</button>
-            <button id="btnDetener" class="btn-primary" >Detener</button>
+            <button id="btnNuevo" class=" btn-danger">Nuevo Juego</button>
+            <button id="btnPedir" disabled="disabled" class="btn-primary">Pedir Carta</button>
+            <button id="btnDetener" disabled="disabled" class="btn-primary">Detener</button>
 
 
         </div>
@@ -35,7 +35,7 @@ Vkoo8x4CGs03+Hhxv8T/Q5PaXtkKtu6ug5T0eNV6gBiFeWPGFN9Muh0f23Q9Ifjh" crossorigin="a
         <div class="col">
 
             <h1>Jugador 1 - <small>0</small></h1>
-            <div id="jugador-cartas">
+            <div id="jugador-cartas" class="divCartas">
                 <!-- <img class="carta" src="assets/cartas/2C.png" alt="">
                 <img class="carta" src="assets/cartas/2C.png" alt="">
                 <img class="carta" src="assets/cartas/2C.png" alt=""> -->
@@ -50,15 +50,22 @@ Vkoo8x4CGs03+Hhxv8T/Q5PaXtkKtu6ug5T0eNV6gBiFeWPGFN9Muh0f23Q9Ifjh" crossorigin="a
         <div class="col">
 
             <h1>Computadora - <small>0</small></h1>
-            <div id="computadora-cartas">
+            <div id="computadora-cartas" class="divCartas">
                 <!-- <img class="carta" src="assets/cartas/10D.png" alt=""> -->
- 
+
             </div>
 
         </div>
     </div>
     <script src="assets/js/undescore-min.js"></script>
-    <script src="assets/js/juego.js"></script>
+    <script src="assets/js/juego-min.js"></script>
+    <script>
+        document.querySelector('#btnNuevo').addEventListener('click', () => {
+            miModulo.nuevoJuego()
+        })
+
+
+    </script>
 </body>
 
 </html>
